--- a/chats.html
+++ b/chats.html
@@ -35,6 +35,24 @@
 
 
     <main class="main-screen">
+      <div class="chatlist">
+      <a href="chat.html">
+        <div class="user-component">
+        <div class="user-component__column">
+          <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
+          class="user-component__avatar user-component__avatar" />
+          <div class="user-component__text">
+            <h4 class="user-component__title">My Master</h4>
+            <h6 class="user-component__subtitle">꺄하아아아아앙</h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
+        </div>
+      </div>
+      </a>
+
       <a href="chat.html">
         <div class="user-component">
         <div class="user-component__column">
@@ -51,6 +69,42 @@
         </div>
       </div>
       </a>
+
+      <a href="chat.html">
+        <div class="user-component">
+        <div class="user-component__column">
+          <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
+          class="user-component__avatar user-component__avatar" />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Nicolas</h4>
+            <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
+        </div>
+      </div>
+      </a>
+
+      <a href="chat.html">
+        <div class="user-component">
+        <div class="user-component__column">
+          <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
+          class="user-component__avatar user-component__avatar" />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Nicolas</h4>
+            <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
+        </div>
+      </div>
+      </a>
+
+    </div>
       
     </main>
 
