--- a/friends.html
+++ b/friends.html
@@ -82,12 +82,13 @@
                 <div class="nav__help_notification"></div><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
+
     <div id="splash-screen">
-      <i class="fas fa-comment"></i>
+      <i class="fas fa-dog"></i>
     </div>
 
     <div id="no-mobile">
-      <span>Your screen is too big :(</span>
+      <span>너무 크다멍! 좀만 줄여주시라멍</span>
     </div>
     <script
       src="https://kit.fontawesome.com/d5fbb687f5.js"
