--- a/settings.html
+++ b/settings.html
@@ -87,7 +87,7 @@
     </nav>
 
     <div id="no-mobile">
-      <span>Your screen is too big :(</span>
+      <span>너무 크다멍! 좀만 줄여주시라멍</span>
     </div>
     <script
       src="https://kit.fontawesome.com/d5fbb687f5.js"
