--- a/chat_지원누나.html
+++ b/chat_지원누나.html
@@ -4,30 +4,31 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat w/ Nico - Kokoa Clone</title>
+    <title>Chat Gaetalk</title>
   </head>
   <body id="chat-screen">
     <div class="status-bar">
       <div class="status-bar__column">
-        <span>No Service</span>
+        <span>누나 안 보임</span>
         <i class="fas fa-wifi"></i>
+        </svg>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>저녁 밥 30분 전</span>
       </div>
       <div class="status-bar__column">
-        <span>110%</span>
-        <i class="fas fa-battery-full fa-lg"></i>
-        <i class="fas fa-bolt"></i>
+        <span>200% 배고픔&nbsp;</span>
+        <i class="fas fa-bone"></i>
       </div>
     </div>
+
 
     <header class="alt-header">
       <div class="alt-header__column">
         <a href="chats.html"><i class="fas fa-angle-left fa-3x"></i></a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">니꼬</h1>
+        <h1 class="alt-header__title">지원 누나</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -37,17 +38,17 @@
 
     <main class="main-screen main-chat">
       <div class="chat__timestamp">
-        Tuesday, June 30, 2020
+        2021년 7월 19일 , 월요일
       </div>
       <div class="message-row">
         <img
           src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg"
         />
         <div class="message-row__content">
-          <span class="message__author">Nicolas</span>
+          <span class="message__author">지원 누나</span>
           <div class="message__info">
-            <span class="message__bubble">Hi!</span>
-            <span class="message__time">21:27</span>
+            <span class="message__bubble">설긔야~~ 산책가장 ㅎ</span>
+            <span class="message__time">10:12</span>
           </div>
         </div>
       </div>
@@ -55,8 +56,17 @@
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__time">21:27</span>
-            <span class="message__bubble">Hi nice to meet you!</span>
+            <span class="message__time">10:13</span>
+            <span class="message__bubble">와아아아아알 너무 좋아요오오옹</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="message-row message-row--own">
+        <div class="message-row__content">
+          <div class="message__info">
+            <span class="message__time">10:13</span>
+            <span class="message__bubble">와아아아아알 너무 좋아요오오옹</span>
           </div>
         </div>
       </div>
