--- a/chats.html
+++ b/chats.html
@@ -9,22 +9,21 @@
   <body>
     <div class="status-bar">
       <div class="status-bar__column">
-        <span>No service</span>
+        <span>누나 안 보임</span>
         <i class="fas fa-wifi"></i>
         </svg>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>저녁 밥 30분 전</span>
       </div>
       <div class="status-bar__column">
-        <span>110%</span>
-        <i class="fas fa-battery-full"></i>
-        <i class="fas fa-bolt"></i>
+        <span>200% 배고픔&nbsp;</span>
+        <i class="fas fa-bone"></i>
       </div>
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Chats</h1>
+        <h1 class="screen-header__title">채팅</h1>
         <div class="screen-header__icons">
             <span><i class="fas fa-search fa-lg"></i></span>
             <span><i class="fas fa-comment-dots fa-lg"></i></span>
@@ -36,24 +35,41 @@
 
     <main class="main-screen">
       <div class="chatlist">
-      <a href="chat.html">
+      <a href="chat_지원누나.html">
         <div class="user-component">
         <div class="user-component__column">
           <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
           class="user-component__avatar user-component__avatar" />
           <div class="user-component__text">
-            <h4 class="user-component__title">My Master</h4>
+            <h4 class="user-component__title">지원 누나</h4>
             <h6 class="user-component__subtitle">꺄하아아아아앙</h6>
           </div>
         </div>
         <div class="user-component__column">
+            <span class="user-component__time">10:33</span>
+            <div class="badge">3</div>
+        </div>
+      </div>
+      </a>
+
+      <a href="chat_멍멍이.html">
+        <div class="user-component">
+        <div class="user-component__column">
+          <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
+          class="user-component__avatar user-component__avatar" />
+          <div class="user-component__text">
+            <h4 class="user-component__title">멍멍이</h4>
+            <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
+          </div>
+        </div>
+        <div class="user-component__column">
             <span class="user-component__time">21:22</span>
             <div class="badge">1</div>
         </div>
       </div>
       </a>
 
-      <a href="chat.html">
+      <a href="chat_고약이.html">
         <div class="user-component">
         <div class="user-component__column">
           <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
@@ -70,24 +86,7 @@
       </div>
       </a>
 
-      <a href="chat.html">
-        <div class="user-component">
-        <div class="user-component__column">
-          <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
-          class="user-component__avatar user-component__avatar" />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Nicolas</h4>
-            <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
-          </div>
-        </div>
-        <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
-            <div class="badge">1</div>
-        </div>
-      </div>
-      </a>
-
-      <a href="chat.html">
+      <a href="chat_백설기.html">
         <div class="user-component">
         <div class="user-component__column">
           <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
