--- a/chats.html
+++ b/chats.html
@@ -109,15 +109,19 @@
     </main>
 
     <nav class="nav">
-        <ul class="nav__list">
-            <li class="nab__btn"><a class="nav__link" href="friends.html"><i class="far fa-user fa-2x"></i></a></li>
-            <li class="nab__btn"><a class="nav__link" href="chats.html">
-                <span class="nav__notification badge">1</span><i class="fas fa-comment fa-2x"></i></a></li>
-            <li class="nab__btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
-            <li class="nab__btn"><a class="nav__link" href="more.html">
-                <div class="nav__help_notification"></div><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
-        </ul>
-    </nav>
+      <ul class="nav__list">
+          <li class="nav_btn">
+            <a class="nav__link" href="friends.html">
+            <i class="fas fa-user fa-2x"></i></a></li>
+          <li class="nav_btn"><a class="nav__link" href="chats.html">
+              <span class="nav__notification badge">1</span><i class="far fa-comment fa-2x"></i></a></li>
+          <li class="nav_btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
+          <li class="nav_btn"><a class="nav__link" href="more.html">
+              <div class="nav__help_notification"></div>
+              <i class="fas fa-ellipsis-h fa-2x"></i></a></li>
+      </ul>
+  </nav>
+  
     <div id="no-mobile">
       <span>너무 크다멍! 좀만 줄여주시라멍</span>
     </div>
