--- a/friends.html
+++ b/friends.html
@@ -251,14 +251,15 @@
 
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nab__btn">
+            <li class="nav_btn">
               <a class="nav__link" href="friends.html">
               <i class="fas fa-user fa-2x"></i></a></li>
-            <li class="nab__btn"><a class="nav__link" href="chats.html">
+            <li class="nav_btn"><a class="nav__link" href="chats.html">
                 <span class="nav__notification badge">1</span><i class="far fa-comment fa-2x"></i></a></li>
-            <li class="nab__btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
-            <li class="nab__btn"><a class="nav__link" href="more.html">
-                <div class="nav__help_notification"></div><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
+            <li class="nav_btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
+            <li class="nav_btn"><a class="nav__link" href="more.html">
+                <div class="nav__help_notification"></div>
+                <i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
 
