--- a/chat_지원누나.html
+++ b/chat_지원누나.html
@@ -41,7 +41,9 @@
         2021년 7월 19일 , 월요일
       </div>
       <div class="message-row">
-        <img
+
+        <div class="message_chat">
+        <img class="chat_img"
           src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg"
         />
         <div class="message-row__content">
@@ -51,26 +53,29 @@
             <span class="message__time">10:12</span>
           </div>
         </div>
-      </div>
+      </div></div>
 
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
             <span class="message__time">10:13</span>
-            <span class="message__bubble">와아아아아알 너무 좋아요오오옹</span>
+            <span class="message__bubble">와아아아아알 너무 좋아요오오옹 꺄항</span>
           </div>
         </div>
       </div>
-
-      <div class="message-row message-row--own">
-        <div class="message-row__content">
-          <div class="message__info">
-            <span class="message__time">10:13</span>
-            <span class="message__bubble">와아아아아알 너무 좋아요오오옹</span>
-          </div>
+      <div class="message_chat_last">
+        <img class="chat_img"
+          src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg"
+        />
+      <div class="message-row__content">
+        <span class="message__author">지원 누나</span>
+        <div class="message__info">
+          <span class="message__bubble">기분 좋으면 빵야 한번 만 해줘 ㅎㅎ</span>
+          <span class="message__time">10:15</span>
         </div>
       </div>
-    </main>
+    </div>
+    </div>
 
     <form class="reply">
       <div class="reply__column">
@@ -85,7 +90,7 @@
       </div>
     </form>
     <div id="no-mobile">
-      <span>Your screen is too big :(</span>
+      <span>너무 크다멍! 좀만 줄여주시라멍</span>
     </div>
     <script
       src="https://kit.fontawesome.com/d5fbb687f5.js"
