--- a/chats.html
+++ b/chats.html
@@ -42,11 +42,11 @@
           class="user-component__avatar user-component__avatar" />
           <div class="user-component__text">
             <h4 class="user-component__title">지원 누나</h4>
-            <h6 class="user-component__subtitle">꺄하아아아아앙</h6>
+            <h6 class="user-component__subtitle">기분 좋으면 빵야 한번 만 해줘 ㅎㅎ</h6>
           </div>
         </div>
         <div class="user-component__column">
-            <span class="user-component__time">10:33</span>
+            <span class="user-component__time">10:15</span>
             <div class="badge">3</div>
         </div>
       </div>
