--- a/more.html
+++ b/more.html
@@ -37,12 +37,12 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://avatars3.githubusercontent.com/u/3612017"
+            src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Nicolas</h4>
-            <h6 class="user-component__subtitle">+ 787 666 999</h6>
+            <h4 class="user-component__title">백설기</h4>
+            <h6 class="user-component__subtitle">+ 123 456 789</h6>
           </div>
         </div>
         <div class="user-component__column">
@@ -55,7 +55,7 @@
           <span>Calendar</span>
         </div>
         <div class="icon-row__icon">
-          <i class="far fa-smile-beam"></i>
+          <i class="fas fa-paw"></i>
           <span>Emoticons</span>
         </div>
         <div class="icon-row__icon">
@@ -63,7 +63,7 @@
           <span>Themes</span>
         </div>
         <div class="icon-row__icon">
-          <i class="fas fa-file-invoice-dollar"></i>
+          <i class="fas fa-piggy-bank"></i>
           <span>Account</span>
         </div>
       </div>
@@ -74,15 +74,31 @@
             <div class="more-suggestions__icon-image">
               <i class="fas fa-quote-right"></i>
             </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
+            <span class="more-suggestions__icon-text">강아지 장난감</span>
           </div>
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
               <i class="fas fa-quote-right"></i>
             </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
+            <span class="more-suggestions__icon-text">동물병원</span>
+          </div>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fas fa-quote-right"></i>
+            </div>
+            <span class="more-suggestions__icon-text">간식</span>
+          </div>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fas fa-quote-right"></i>
+            </div>
+            <span class="more-suggestions__icon-text">강아지 옷</span>
           </div>
         </div>
+        </div>
+          
+      </div>
+      
       </div>
     </main>
 
