--- a/chat_지원누나.html
+++ b/chat_지원누나.html
@@ -76,7 +76,9 @@
       </div>
     </div>
     </div>
-
+    <div class="des_icon">
+    <i class="fas fa-paw-lg"></i>
+  </div>
     <form class="reply">
       <div class="reply__column">
         <i class="far fa-plus-square fa-lg"></i>
@@ -92,6 +94,7 @@
     <div id="no-mobile">
       <span>너무 크다멍! 좀만 줄여주시라멍</span>
     </div>
+
     <script
       src="https://kit.fontawesome.com/d5fbb687f5.js"
       crossorigin="anonymous"
