--- a/more.html
+++ b/more.html
@@ -72,27 +72,27 @@
         <div class="more-suggestions__icons">
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+              <img src="https://image.flaticon.com/icons/png/512/5020/5020182.png" class="sug-icon" />
             </div>
-            <span class="more-suggestions__icon-text">강아지 장난감</span>
+            <span class="more-suggestions__icon-text">dog-toys</span>
           </div>
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+              <img src="https://image.flaticon.com/icons/png/512/2309/2309912.png" class="sug-icon" />
             </div>
-            <span class="more-suggestions__icon-text">동물병원</span>
+            <span class="more-suggestions__icon-text">hospital</span>
           </div>
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+              <img src="https://image.flaticon.com/icons/png/512/91/91535.png" class="sug-icon" />
             </div>
-            <span class="more-suggestions__icon-text">간식</span>
+            <span class="more-suggestions__icon-text">foods</span>
           </div>
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+              <img src="https://image.flaticon.com/icons/png/512/823/823553.png" class="sug-icon" />
             </div>
-            <span class="more-suggestions__icon-text">강아지 옷</span>
+            <span class="more-suggestions__icon-text">clothes</span>
           </div>
         </div>
         </div>
