--- a/chat_백설기.html
+++ b/chat_백설기.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat w/ Nico - Kokoa Clone</title>
+    <title>Chat Gaetalk</title>
   </head>
   <body id="chat-screen">
     <div class="status-bar">
@@ -28,7 +28,7 @@
         <a href="chats.html"><i class="fas fa-angle-left fa-3x"></i></a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">니꼬</h1>
+        <h1 class="alt-header__title">백설기</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -38,31 +38,54 @@
 
     <main class="main-screen main-chat">
       <div class="chat__timestamp">
-        Tuesday, June 30, 2020
+        2021년 7월 19일 , 월요일
       </div>
+   <div class="chat_me">
+
+    <div></div>
       <div class="message-row">
-        <img
-          src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg"
-        />
+      <div class="message-row message-row--own">
         <div class="message-row__content">
-          <span class="message__author">Nicolas</span>
           <div class="message__info">
-            <span class="message__bubble">Hi!</span>
-            <span class="message__time">21:27</span>
+            <span class="message__time">3:46</span>
+            <span class="message__bubble">쿠션이 너무 외로워보여서 그랬월....</span>
           </div>
         </div>
+      </div>
       </div>
 
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__time">21:27</span>
-            <span class="message__bubble">Hi nice to meet you!</span>
+            <span class="message__time">3:47</span>
+            <span class="message__bubble">이 새벽에 깨오있던 건 나밖에 읎었다고...</span>
           </div>
         </div>
       </div>
-    </main>
 
+      <div class="message-row message-row--own ">
+        <div class="message-row__content">
+          <div class="message__info">
+            <span class="message__time">3:47</span>
+            <span class="message__bubble">그냥 같이 놀재서 난 물어뜯었을 뿐이야 왈...</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="message-row message-row--own last">
+        <div class="message-row__content">
+          <div class="message__info">
+            <span class="message__time">3:48</span>
+            <span class="message__bubble">ㅎ...</span>
+          </div>
+        </div>
+      </div>
+    
+    </div>
+  </main>
+    <div class="des_icon">
+    <i class="fas fa-paw-lg"></i>
+     </div>
     <form class="reply">
       <div class="reply__column">
         <i class="far fa-plus-square fa-lg"></i>
@@ -76,8 +99,9 @@
       </div>
     </form>
     <div id="no-mobile">
-      <span>Your screen is too big :(</span>
+      <span>너무 크다멍! 좀만 줄여주시라멍</span>
     </div>
+
     <script
       src="https://kit.fontawesome.com/d5fbb687f5.js"
       crossorigin="anonymous"
