--- a/chat_지원누나.html
+++ b/chat_지원누나.html
@@ -74,7 +74,7 @@
           <span class="message__time">10:15</span>
         </div>
       </div>
-    </div>
+    </main>
     </div>
     <div class="des_icon">
     <i class="fas fa-paw-lg"></i>
