--- a/chats.html
+++ b/chats.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friends - Kokoa Clone</title>
+    <title>Chats - Gaetalk</title>
     <link rel="stylesheet" href="css/styles.css"/>
   </head>
   <body>
@@ -63,8 +63,8 @@
           </div>
         </div>
         <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
-            <div class="badge">1</div>
+            <span class="user-component__time">13:02</span>
+            <div class="badge">3</div>
         </div>
       </div>
       </a>
@@ -75,13 +75,13 @@
           <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
           class="user-component__avatar user-component__avatar" />
           <div class="user-component__text">
-            <h4 class="user-component__title">Nicolas</h4>
-            <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
+            <h4 class="user-component__title">고약이</h4>
+            <h6 class="user-component__subtitle">고약한 고양이... 힝ㅠ</h6>
           </div>
         </div>
         <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
-            <div class="badge">1</div>
+            <span class="user-component__time">11:40</span>
+            <div class="badge">2</div>
         </div>
       </div>
       </a>
@@ -92,13 +92,13 @@
           <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
           class="user-component__avatar user-component__avatar" />
           <div class="user-component__text">
-            <h4 class="user-component__title">Nicolas</h4>
-            <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
+            <h4 class="user-component__title">백설기</h4>
+            <h6 class="user-component__subtitle">ㅎ...</h6>
           </div>
         </div>
         <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
-            <div class="badge">1</div>
+            <span class="user-component__time">3:48</span>
+            <div class="badge">5</div>
         </div>
       </div>
       </a>
