--- a/friends.html
+++ b/friends.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friends</title>
+    <title>Friends-Gaetalk</title>
     <link rel="stylesheet" href="css/styles.css"/>
 
   </head>
