--- a/find.html
+++ b/find.html
@@ -9,17 +9,16 @@
   <body>
     <div class="status-bar">
       <div class="status-bar__column">
-        <span>No service</span>
+        <span>누나 안 보임</span>
         <i class="fas fa-wifi"></i>
         </svg>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>저녁 밥 30분 전</span>
       </div>
       <div class="status-bar__column">
-        <span>110%</span>
-        <i class="fas fa-battery-full"></i>
-        <i class="fas fa-bolt"></i>
+        <span>200% 배고픔&nbsp;</span>
+        <i class="fas fa-bone"></i>
       </div>
     </div>
 
@@ -72,13 +71,13 @@
 
     <nav class="nav">
       <ul class="nav__list">
-          <li class="nav_btn">
+          <li class="nav__btn">
             <a class="nav__link" href="friends.html">
             <i class="far fa-user fa-2x"></i></a></li>
-          <li class="nav_btn"><a class="nav__link" href="chats.html">
+          <li class="nav__btn"><a class="nav__link" href="chats.html">
               <span class="nav__notification badge">1</span><i class="far fa-comment fa-2x"></i></a></li>
-          <li class="nav_btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
-          <li class="nav_btn"><a class="nav__link" href="more.html">
+          <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
+          <li class="nav__btn"><a class="nav__link" href="more.html">
               <div class="nav__help_notification"></div>
               <i class="fas fa-ellipsis-h fa-2x"></i></a></li>
       </ul>
