--- a/friends.html
+++ b/friends.html
@@ -251,13 +251,13 @@
 
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav_btn">
+            <li class="nav__btn">
               <a class="nav__link" href="friends.html">
               <i class="fas fa-user fa-2x"></i></a></li>
-            <li class="nav_btn"><a class="nav__link" href="chats.html">
+            <li class="nav__btn"><a class="nav__link" href="chats.html">
                 <span class="nav__notification badge">1</span><i class="far fa-comment fa-2x"></i></a></li>
-            <li class="nav_btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
-            <li class="nav_btn"><a class="nav__link" href="more.html">
+            <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="more.html">
                 <div class="nav__help_notification"></div>
                 <i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
@@ -268,8 +268,9 @@
     </div>
 
     <div id="no-mobile">
-      <span>너무 크다멍! 좀만 줄여주시라멍</span>
+      <span>으악! 화면이 왜 이러냐멍!</span>
     </div>
+
     <script
       src="https://kit.fontawesome.com/d5fbb687f5.js"
       crossorigin="anonymous"
