--- a/settings.html
+++ b/settings.html
@@ -9,16 +9,16 @@
   <body>
     <div class="status-bar">
       <div class="status-bar__column">
-        <span>No Service</span>
+        <span>누나 안 보임</span>
         <i class="fas fa-wifi"></i>
+        </svg>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>저녁 밥 30분 전</span>
       </div>
       <div class="status-bar__column">
-        <span>110%</span>
-        <i class="fas fa-battery-full fa-lg"></i>
-        <i class="fas fa-bolt"></i>
+        <span>200% 배고픔&nbsp;</span>
+        <i class="fas fa-bone"></i>
       </div>
     </div>
 
