--- a/find.html
+++ b/find.html
@@ -83,9 +83,9 @@
       </ul>
   </nav>
   
-    <div id="no-mobile">
-      <span>너무 크다멍! 좀만 줄여주시라멍</span>
-    </div>
+  <div id="no-mobile">
+    <span>으악! 잘 좀 조절해보라멍!</span>
+  </div>
     <script
       src="https://kit.fontawesome.com/d5fbb687f5.js"
       crossorigin="anonymous"
