--- a/friends.html
+++ b/friends.html
@@ -268,7 +268,7 @@
     </div>
 
     <div id="no-mobile">
-      <span>으악! 화면이 왜 이러냐멍!</span>
+      <span>으악! 잘 좀 조절해보라멍!</span>
     </div>
 
     <script
