change-nav_btn-to-nav__btn

--- a/find.html
+++ b/find.html
@@ -74,10 +74,10 @@
           <li class="nav__btn">
             <a class="nav__link" href="friends.html">
             <i class="far fa-user fa-2x"></i></a></li>
-          <li class="nav_btn"><a class="nav__link" href="chats.html">
+          <li class="nav__btn"><a class="nav__link" href="chats.html">
               <span class="nav__notification badge">13</span><i class="far fa-comment fa-2x"></i></a></li>
-          <li class="nav_btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
-          <li class="nav_btn"><a class="nav__link" href="more.html">
+          <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
+          <li class="nav__btn"><a class="nav__link" href="more.html">
               <div class="nav__help_notification"></div>
               <i class="fas fa-ellipsis-h fa-2x"></i></a></li>
       </ul>
