--- a/chat_백설기.html
+++ b/chat_백설기.html
@@ -40,11 +40,8 @@
       <div class="chat__timestamp">
         2021년 7월 19일 , 월요일
       </div>
-   <div class="chat_me">
-
-    <div></div>
       <div class="message-row">
-      <div class="message-row message-row--own">
+      <div class="message-row message-row--own me-first">
         <div class="message-row__content">
           <div class="message__info">
             <span class="message__time">3:46</span>
@@ -67,7 +64,7 @@
         <div class="message-row__content">
           <div class="message__info">
             <span class="message__time">3:47</span>
-            <span class="message__bubble">그냥 같이 놀재서 난 물어뜯었을 뿐이야 왈...</span>
+            <span class="message__bubble">그냥 같이 놀재서 난 물어뜯었을 뿐야 왈...</span>
           </div>
         </div>
       </div>
@@ -81,7 +78,7 @@
         </div>
       </div>
     
-    </div>
+  
   </main>
     <div class="des_icon">
     <i class="fas fa-paw-lg"></i>
