--- a/chats.html
+++ b/chats.html
@@ -58,7 +58,7 @@
           <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
           class="user-component__avatar user-component__avatar" />
           <div class="user-component__text">
-            <h4 class="user-component__title">멍멍이</h4>
+            <h4 class="user-component__title">옆집 차돌이</h4>
             <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
           </div>
         </div>
