--- a/chat_지원누나.html
+++ b/chat_지원누나.html
@@ -63,7 +63,8 @@
           </div>
         </div>
       </div>
-      <div class="message_chat_last">
+
+      <div class="message-row message_chat_last">
         <img class="chat_img"
           src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg"
         />
