--- a/chats.html
+++ b/chats.html
@@ -59,7 +59,8 @@
           class="user-component__avatar user-component__avatar" />
           <div class="user-component__text">
             <h4 class="user-component__title">옆집 차돌이</h4>
-            <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
+            <h6 class="user-component__subtitle">담에 누나한테 사달라고 졸라야지 왈왈!
+            </h6>
           </div>
         </div>
         <div class="user-component__column">
