--- a/find.html
+++ b/find.html
@@ -23,7 +23,7 @@
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Find</h1>
+        <h1 class="screen-header__title">찾기</h1>
         <div class="screen-header__icons">
             <span><i class="fas fa-search fa-lg"></i></span>
             <span><i class="fas fa-cog fa-lg"></i></span>
@@ -33,15 +33,12 @@
 
     <main class="main-screen">
         <div class="icon-row">
-            <div class="icon-row__icon"><i class="fas fa-qrcode"></i><span>QU code</span></div>
-            <div class="icon-row__icon"><i class="far fa-address-book"></i><span>Add by Contacts</span></div>
-            <div class="icon-row__icon"><i class="fas fa-fingerprint"></i><span>Add by ID</span></div>
-            <div class="icon-row__icon"><i class="far fa-envelope"></i><span>Invite</span></div>
+            <div class="icon-row__icon"><i class="fas fa-paw"></i><span>산책 코스</span></div>
+            <div class="icon-row__icon"><i class="fas fa-check"></i><span>상태 알리기</span></div>
+            <div class="icon-row__icon"><i class="fas fa-compass"></i><span>위치 공유</span></div>
+            <div class="icon-row__icon"><i class="fas fa-envelope-open-text"></i><span>초대하기</span></div>
         </div>
-        <div class="recommended-friends">
-            <h6 class="recommended-friends__title">Recommended Friends</h6>
-            <span>You have no recommended friends.</span>
-        </div>
+       
         <div class="open-chat">
             <div class="open-chat__header">
                 <h4>Open Chat</h4>
@@ -49,11 +46,11 @@
             </div>
             <div class="open-post">
                 <div class="open-post__column">
-                    <h5 class="open-post__title">#BTS</h5>
-                    <h6 class="open-post__hashtag">#bts#army#friends</h6>
+                    <h4 class="open-post__title">고독한 스피츠 모임</h4>
+                    <h5 class="open-post__hashtag">#스피츠 #귀여움주의 #그게 나</h5>
                     <div class="open-post__members">
                         <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" />
-                        <span class="open-post__member-count">802 members</span>
+                        <span class="open-post__member-count">879 members</span>
                         <div class="divider"></div>
                         <span class="open-post__member-status">Active</span>
                     </div>
@@ -62,11 +59,54 @@
                     <div class="open-post__photo">
                         <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" />
                         <div class="open-post__heart-count">
-                            <i class="fas fa-heart fa-xs"></i><span>326</span>
+                            <i class="fas fa-heart fa-xs"></i><span>999</span>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <div class="open-post">
+              <div class="open-post__column">
+                  <h4 class="open-post__title">고양이 저리가!!</h4>
+                  <h5 class="open-post__hashtag">#고양이출입금지 #피하는법</h5>
+                  <div class="open-post__members">
+                      <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" />
+                      <span class="open-post__member-count">304 members</span>
+                      <div class="divider"></div>
+                      <span class="open-post__member-status">Active</span>
+                  </div>
+              </div>
+              <div class="open-post__column">
+                  <div class="open-post__photo">
+                      <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" />
+                      <div class="open-post__heart-count">
+                          <i class="fas fa-heart fa-xs"></i><span>449</span>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+          <div class="open-post">
+            <div class="open-post__column">
+                <h4 class="open-post__title">지렁이 죠아멍ㅎ</h4>
+                <h5 class="open-post__hashtag">#지렁이는 꿈틀꿈틀 #꼬물이 #비 조아</h5>
+                <div class="open-post__members">
+                    <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" />
+                    <span class="open-post__member-count">678 members</span>
+                    <div class="divider"></div>
+                    <span class="open-post__member-status">Active</span>
+                </div>
+            </div>
+            <div class="open-post__column">
+                <div class="open-post__photo">
+                    <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" />
+                    <div class="open-post__heart-count">
+                        <i class="fas fa-heart fa-xs"></i><span>787</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main> 
 
     <nav class="nav">
