--- a/chats.html
+++ b/chats.html
@@ -114,7 +114,7 @@
             <a class="nav__link" href="friends.html">
             <i class="far fa-user fa-2x"></i></a></li>
           <li class="nav__btn"><a class="nav__link" href="chats.html">
-              <span class="nav__notification badge">13</span><i class="fas fa-comment fa-2x"></i></a></li>
+              <i class="fas fa-comment fa-2x"></i></a></li>
           <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
           <li class="nav__btn"><a class="nav__link" href="more.html">
               <div class="nav__help_notification"></div>
