modify-font&friends

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </svg>
       </div>
       <div class="status-bar__column">
-        <span>저녁 밥 30분 전</span>
+        <span>저녁 밥 20분 전</span>
       </div>
       <div class="status-bar__column">
         <span>200% 배고픔&nbsp;</span>
@@ -24,7 +24,7 @@
     </div>
 
     <header class="welcome-header">
-        <h1 class="welcome-header__title">개톡에 온 걸 환영해!</h1>
+        <h1 class="welcome-header__title">개톡에 온 걸 환영해멍!</h1>
         <p class="welcome-header__text">만약 멍멍 계정이 있다면,<br>이메일이나 휴대폰 번호로 로그인 해 줘!
           </p>
     </header>
