update setting link

--- a/find.html
+++ b/find.html
@@ -26,7 +26,8 @@
         <h1 class="screen-header__title">찾기</h1>
         <div class="screen-header__icons">
             <span><i class="fas fa-search fa-lg"></i></span>
-            <span><i class="fas fa-cog fa-lg"></i></span>
+            <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
+                ></span>
         </div>
     </header>
 
