--- a/account_백설기.html
+++ b/account_백설기.html
@@ -44,6 +44,10 @@
                 <i class="fas fa-comment"></i>
                 <span>1:1채팅</span>
             </div>
+            <div class="account__edit">
+              <i class="fas fa-pencil-alt"></i>
+              <span>프로필 편집</span>
+            </div>
             <div class="account__btn__call">
                 <i class="fas fa-phone-alt"></i>
                 <span>통화하기</span>
