--- a/account_백설기.html
+++ b/account_백설기.html
@@ -23,36 +23,44 @@
       </div>
     </div>
 
-    <div class="account">
-        <div class="account__bar">
-            <i class="fas fa-times"></i>
-            <i class="fas fa-gift"></i>
-            <i class="fas fa-cog"></i>
-        </div>
-        <div class="account__song">
+    <header class="screen-header profile">
+      <a href="friends.html">
+        <i class="fas fa-times fa-3x"></i>
+      </a>
+      <div class="screen-header__icons">
+        <i class="fas fa-gift fa-2x"></i>
+        <i class="fas fa-cog fa-2x"></i>
+      </div>
+  </header>
+
+    <main>
+      <div class="account">
+        <!-- <div class="account__song">
             <img src="#" />
             <i class="fas fa-heart"></i>
             <i class="fas fa-heart"></i>
-        </div>
+        </div> -->
         <div class="account__inf">
             <img src="#"/>
-            <span>백설기</span>
-            <span>상태메세지</span>
+            <span class="name">백설기</span>
+            <span class="sta-mes">상태메세지</span>
         </div>
         <div class="account__btn">
-            <div class="account__btn__chat">
-                <i class="fas fa-comment"></i>
+            <div class="account__btn__icons">
+                <i class="fas fa-comment fa-2x"></i>
                 <span>1:1채팅</span>
             </div>
-            <div class="account__edit">
-              <i class="fas fa-pencil-alt"></i>
+            <div class="account__btn__icons">
+              <i class="fas fa-pencil-alt fa-2x"></i>
               <span>프로필 편집</span>
             </div>
-            <div class="account__btn__call">
-                <i class="fas fa-phone-alt"></i>
+            <div class="account__btn__icons">
+                <i class="fas fa-phone-alt fa-2x"></i>
                 <span>통화하기</span>
             </div>
         </div>
+    </main>
+  
 
     </div>
    </body>
