update account.html & link

--- a/chat_지원누나.html
+++ b/chat_지원누나.html
@@ -44,7 +44,7 @@
 
         <div class="message_chat">
         <img class="chat_img"
-          src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg"
+          src="https://cdn.discordapp.com/attachments/862644219955904515/866649300317896734/1.png"
         />
         <div class="message-row__content">
           <span class="message__author">지원 누나</span>
@@ -66,7 +66,7 @@
 
       <div class="message-row message_chat_last">
         <img class="chat_img"
-          src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg"
+          src="https://cdn.discordapp.com/attachments/862644219955904515/866649300317896734/1.png"
         />
       <div class="message-row__content">
         <span class="message__author">지원 누나</span>
