--- a/chats.html
+++ b/chats.html
@@ -39,7 +39,7 @@
       <a href="chat_지원누나.html">
         <div class="user-component">
         <div class="user-component__column">
-          <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
+          <img src="https://cdn.discordapp.com/attachments/862644219955904515/866649300317896734/1.png" 
           class="user-component__avatar user-component__avatar" />
           <div class="user-component__text">
             <h4 class="user-component__title">지원 누나</h4>
