--- a/friends.html
+++ b/friends.html
@@ -107,7 +107,7 @@
         <!-- <지원 누나> -->
         <div class="user-component ">
           <div class="user-component__column">
-            <a class="prof__link" href="account_기본.html">
+            <a class="prof__link" href="account_지원누나.html">
               <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
             class="user-component__avatar user-component__avatar--sm" />
             </a>
