--- a/account_경비아저씨.html
+++ b/account_경비아저씨.html
@@ -41,9 +41,10 @@
             <i class="fas fa-heart"></i>
         </div> -->
         <div class="account__inf">
-            <img src="https://cdn.discordapp.com/attachments/862644219955904515/866649300317896734/1.png"/>
-            <span class="name">지원 누나</span>
-            <span class="sta-mes">아침 9시에 일어나 개 밥 줘</span>
+            <img src="https://cdn.discordapp.com/attachments/862644219955904515/866649298984632350/7.png
+            "/>
+            <span class="name">경비 아저씨</span>
+            <span class="sta-mes">땡벌이여 ..</span>
         </div>
         <div class="account__btn others">
             <div class="account__btn__icons">
