--- a/account_경훈형아.html
+++ b/account_경훈형아.html
@@ -41,9 +41,9 @@
             <i class="fas fa-heart"></i>
         </div> -->
         <div class="account__inf">
-            <img src="https://cdn.discordapp.com/attachments/862644219955904515/866649300317896734/1.png"/>
-            <span class="name">지원 누나</span>
-            <span class="sta-mes">아침 9시에 일어나 개 밥 줘</span>
+            <img src="https://cdn.discordapp.com/attachments/862644219955904515/866649298052448256/6.png"/>
+            <span class="name">경훈 형아</span>
+            <span class="sta-mes">나는 짱이다</span>
         </div>
         <div class="account__btn others">
             <div class="account__btn__icons">
