--- a/account_백설기.html
+++ b/account_백설기.html
@@ -43,7 +43,7 @@
         <div class="account__inf">
             <img src="#"/>
             <span class="name">백설기</span>
-            <span class="sta-mes">상태메세지</span>
+            <span class="sta-mes">와아앙와아알</span>
         </div>
         <div class="account__btn">
             <div class="account__btn__icons">
