--- a/friends.html
+++ b/friends.html
@@ -127,7 +127,7 @@
         <!-- <엄마> -->
         <div class="user-component ">
           <div class="user-component__column">
-            <a class="prof__link" href="account_기본.html">
+            <a class="prof__link" href="account_엄마.html">
               <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
             class="user-component__avatar user-component__avatar--sm" />
             </a>
@@ -148,7 +148,7 @@
       <!-- <경비 아저씨> -->
       <div class="user-component ">
         <div class="user-component__column">
-          <a class="prof__link" href="account_기본.html">
+          <a class="prof__link" href="account_경비아저씨.html">
             <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
           class="user-component__avatar user-component__avatar--sm" />
           </a>
@@ -170,7 +170,7 @@
       <!-- <아빠> -->
       <div class="user-component ">
         <div class="user-component__column">
-          <a class="prof__link" href="account_기본.html">
+          <a class="prof__link" href="account_아빠.html">
             <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
           class="user-component__avatar user-component__avatar--sm" />
           </a>
@@ -190,13 +190,13 @@
       <!-- <형아> -->
       <div class="user-component ">
         <div class="user-component__column">
-          <a class="prof__link" href="account_기본.html">
+          <a class="prof__link" href="account_형아.html">
             <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
           class="user-component__avatar user-component__avatar--sm" />
           </a>
           <div class="user-component__text plus">
             <span class="user-component__title user-component__title--not-bold">형아</span>
-            <span class="user-component__status-message">바람이 멈추는 곳에서.</span>
+            <span class="user-component__status-message">군대 감...</span>
           </div>
         </div>
         <div class="user-component__column">
@@ -210,18 +210,18 @@
       <!-- <지민 누나> -->
       <div class="user-component ">
         <div class="user-component__column">
-          <a class="prof__link" href="account_기본.html">
+          <a class="prof__link" href="account_지민누나.html">
             <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
           class="user-component__avatar user-component__avatar--sm" />
           </a>
           <div class="user-component__text plus">
             <span class="user-component__title user-component__title--not-bold">지민 누나</span>
-            <span class="user-component__status-message">바람이 멈추는 곳에서.</span>
+            <span class="user-component__status-message">꺄하아아앙</span>
           </div>
         </div>
         <div class="user-component__column">
           <div class="user-component__music-box">
-            <span>방탄소년단-Whalien 52&nbsp;</span>
+            <span>성시경-방랑자&nbsp;</span>
             <i class="fas fa-caret-right"></i>
           </div>
         </div>
@@ -230,7 +230,7 @@
       <!-- <경훈 형아> -->
       <div class="user-component ">
         <div class="user-component__column">
-          <a class="prof__link" href="account_기본.html">
+          <a class="prof__link" href="account_경훈형아.html">
             <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
           class="user-component__avatar user-component__avatar--sm" />
           </a>
@@ -251,13 +251,13 @@
       <!-- <용현 형아> -->
       <div class="user-component ">
         <div class="user-component__column">
-          <a class="prof__link" href="account_기본.html">
+          <a class="prof__link" href="account_용현형아.html">
             <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
           class="user-component__avatar user-component__avatar--sm" />
           </a>
           <div class="user-component__text plus">
             <span class="user-component__title user-component__title--not-bold">용현 형아</span>
-            <span class="user-component__status-message">바람이 멈추는 곳에서.</span>
+            <span class="user-component__status-message">오늘도 헬스~</span>
           </div>
         </div>
         <div class="user-component__column">
