--- a/account_아빠.html
+++ b/account_아빠.html
@@ -41,9 +41,9 @@
             <i class="fas fa-heart"></i>
         </div> -->
         <div class="account__inf">
-            <img src="https://cdn.discordapp.com/attachments/862644219955904515/866649300317896734/1.png"/>
-            <span class="name">지원 누나</span>
-            <span class="sta-mes">아침 9시에 일어나 개 밥 줘</span>
+            <img src="https://cdn.discordapp.com/attachments/862644219955904515/866649298052448256/6.png"/>
+            <span class="name">아빠</span>
+            <span class="sta-mes">바람이 멈추는 곳에서.</span>
         </div>
         <div class="account__btn others">
             <div class="account__btn__icons">
