--- a/account_지민누나.html
+++ b/account_지민누나.html
@@ -41,9 +41,9 @@
             <i class="fas fa-heart"></i>
         </div> -->
         <div class="account__inf">
-            <img src="https://cdn.discordapp.com/attachments/862644219955904515/866649300317896734/1.png"/>
-            <span class="name">지원 누나</span>
-            <span class="sta-mes">아침 9시에 일어나 개 밥 줘</span>
+            <img src="https://cdn.discordapp.com/attachments/862644219955904515/866649301361754122/2.png"/>
+            <span class="name">지민 누나</span>
+            <span class="sta-mes">꺄하아아앙</span>
         </div>
         <div class="account__btn others">
             <div class="account__btn__icons">
