update_friends_birth,channel

--- a/friends.html
+++ b/friends.html
@@ -59,9 +59,10 @@
           <i class="fas fa-chevron-up fa-xs"></i>
         </div>
         <div class="user-component">
-          <div class="user-component__column">
-            <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
-            class="user-component__avatar user-component__avatar--sm" />
+          <div class="user-component__column ">
+            <div class="profile__img-box pink">
+              <i class=" fas fa-birthday-cake"></i>
+            </div>
             <div class="user-component__text">
               <h4 class="user-component__title user-component__title--not-bold">친구의 생일을 확인해 봐!</h4>
             </div>
@@ -83,8 +84,9 @@
         </div>
         <div class="user-component">
           <div class="user-component__column">
-            <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
-            class="user-component__avatar user-component__avatar--sm" />
+            <div class="profile__img-box pink">
+              <i class="far fa-smile-wink"></i>
+            </div>
             <div class="user-component__text">
               <h4 class="user-component__title user-component__title--not-bold">채널</h4>
               
@@ -162,12 +164,12 @@
           </a>
           <div class="user-component__text plus">
             <span class="user-component__title user-component__title--not-bold">아빠</span>
-            <span class="user-component__status-message">바람이 멈추는 곳에서.</span>
+            <span class="user-component__status-message">바람이 멈추는 곳에서 즐기는 여유 ^^</span>
           </div>
         </div>
         <div class="user-component__column">
           <div class="user-component__music-box">
-            <span>굿&nbsp;</span>
+            <span>Justin Bieber-Peaches&nbsp;</span>
             <i class="fas fa-caret-right"></i>
           </div>
         </div>
