--- a/account_형아.html
+++ b/account_형아.html
@@ -43,7 +43,7 @@
         <div class="account__inf">
             <img src="https://cdn.discordapp.com/attachments/862644219955904515/866649295518957568/4.png"/>
             <span class="name">형아</span>
-            <span class="sta-mes">군대 감...</span>
+            <span class="sta-mes">제대가 안 보여요.</span>
         </div>
         <div class="account__btn others">
             <div class="account__btn__icons">
