--- a/account_백설기.html
+++ b/account_백설기.html
@@ -41,7 +41,7 @@
             <i class="fas fa-heart"></i>
         </div> -->
         <div class="account__inf">
-            <img src="#"/>
+            <img src="https://cdn.discordapp.com/attachments/862644219955904515/866632449839595530/b9bcf1090470fc2c.png"/>
             <span class="name">백설기</span>
             <span class="sta-mes">와아앙와아알</span>
         </div>
