--- a/friends.html
+++ b/friends.html
@@ -153,7 +153,7 @@
       <div class="user-component ">
         <div class="user-component__column">
           <a class="prof__link" href="account_경비아저씨.html">
-            <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
+            <img src="https://cdn.discordapp.com/attachments/862644219955904515/866649298984632350/7.png" 
           class="user-component__avatar user-component__avatar--sm" />
           </a>
           
@@ -195,7 +195,7 @@
       <!-- <형아> -->
       <div class="user-component ">
         <div class="user-component__column">
-          <a class="prof__link" href="account_기본.html">
+          <a class="prof__link" href="account_형아.html">
             <div class="profile__img-box">
               <img class="profile-img" src="https://cdn.discordapp.com/attachments/862644219955904515/866649295518957568/4.png" />
             </div>
@@ -225,7 +225,7 @@
       <div class="user-component ">
         <div class="user-component__column">
           <a class="prof__link" href="account_지민누나.html">
-            <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
+            <img src="https://cdn.discordapp.com/attachments/862644219955904515/866650725634932736/8.png" 
           class="user-component__avatar user-component__avatar--sm" />
           </a>
           <div class="user-component__text plus">
@@ -286,7 +286,7 @@
     <!-- <경비 아저씨> -->
     <div class="user-component ">
       <div class="user-component__column">
-        <a class="prof__link" href="account_기본.html">
+        <a class="prof__link" href="account_경비아저씨.html">
           <div class="profile__img-box">
             <img class="profile-img" src="https://cdn.discordapp.com/attachments/862644219955904515/866649298984632350/7.png" />
           </div>
