--- a/chat_고약이.html
+++ b/chat_고약이.html
@@ -44,7 +44,7 @@
 
         <div class="message_chat">
         <img class="chat_img"
-          src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg"
+          src="https://image.utoimage.com/preview/cp861283/2018/12/201812006440_500.jpg"
         />
         <div class="message-row__content">
           <span class="message__author">고약이</span>
