--- a/chat_멍멍이.html
+++ b/chat_멍멍이.html
@@ -44,7 +44,7 @@
       <div class="message-row">
         <div class="message_chat">
         <img class="chat_img"
-          src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg"
+          src="https://media.istockphoto.com/vectors/cute-shih-tzu-dog-sitting-and-smiling-cartoon-icon-vector-vector-id1272489352"
         />
         <div class="message-row__content">
           <span class="message__author">옆집 차돌이</span>
