--- a/chats.html
+++ b/chats.html
@@ -56,7 +56,7 @@
       <a href="chat_멍멍이.html">
         <div class="user-component">
         <div class="user-component__column">
-          <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
+          <img src="https://media.istockphoto.com/vectors/cute-shih-tzu-dog-sitting-and-smiling-cartoon-icon-vector-vector-id1272489352" 
           class="user-component__avatar user-component__avatar" />
           <div class="user-component__text">
             <h4 class="user-component__title">옆집 차돌이</h4>
@@ -74,7 +74,7 @@
       <a href="chat_고약이.html">
         <div class="user-component">
         <div class="user-component__column">
-          <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
+          <img src="https://image.utoimage.com/preview/cp861283/2018/12/201812006440_500.jpg" 
           class="user-component__avatar user-component__avatar" />
           <div class="user-component__text">
             <h4 class="user-component__title">고약이</h4>
@@ -91,7 +91,7 @@
       <a href="chat_백설기.html">
         <div class="user-component">
         <div class="user-component__column">
-          <img src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg" 
+          <img class="img_back" src="https://cdn.discordapp.com/attachments/862644219955904515/866632449839595530/b9bcf1090470fc2c.png" 
           class="user-component__avatar user-component__avatar" />
           <div class="user-component__text">
             <h4 class="user-component__title">백설기</h4>
