--- a/account_아빠.html
+++ b/account_아빠.html
@@ -43,7 +43,7 @@
         <div class="account__inf">
             <img src="https://cdn.discordapp.com/attachments/862644219955904515/866649301361754122/2.png"/>
             <span class="name">아빠</span>
-            <span class="sta-mes">바람이 멈추는 곳에서.</span>
+            <span class="sta-mes">바람이 멈추는 곳에서 즐기는 여유 ^^</span>
         </div>
         <div class="account__btn others">
             <div class="account__btn__icons">
