update-more-profile

--- a/more.html
+++ b/more.html
@@ -37,7 +37,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://file2.instiz.net/data/cached_img/upload/2017/09/13/20/f90b8f3fa077b4b99a5868bd3624449d.jpg"
+            src="https://cdn.discordapp.com/attachments/862644219955904515/866632449839595530/b9bcf1090470fc2c.png"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
